--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body {
-  width: 1219px auto;
+
   padding-top: 84px;
   margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+
+/* MENU */
 #t1, #t2, #t3 {
   position: absolute;
   margin-top: -84px;
@@ -53,6 +55,9 @@ body {
   margin-left: auto;
   margin-right: auto;
  }
+
+
+ /* HEADING */
 .container-heading{
   background-image: url(img/heading.png);
   margin: 0 auto;
@@ -65,8 +70,10 @@ body {
   line-height: 84px;
   text-align: center;
   color: white;
-
 }
+/* --------------------- */
+
+/* PROBLEM */
 .problem {
   background-color: #EEEEEE;
 }
@@ -96,6 +103,8 @@ h2 {
   line-height: 37px;
   color: #000000;
 }
+
+/* HERO */
 .container-hero {
   box-sizing: border-box;
   max-width: 1219px;
@@ -118,7 +127,9 @@ h2 {
   text-align: center;
   color: #fff;
 }
+/* --------------------- */
 
+/* INTRODUCING */
 .container-intro{
   max-width: 1219px;
   margin-left: auto;
@@ -139,6 +150,9 @@ h2 {
   color: #000000;
   text-align: justify;
  }
+/* --------------------- */
+
+ /* TEAM */
  .team {
   background: #EEEEEE;
   padding: 48px 54px 122px 55px;
@@ -179,6 +193,9 @@ h2 {
   color: #000000;
   margin-top: 0px;
  }
+ /* ------------------ */
+
+
 footer {
   background-color: #333333;
   padding: 48px 340px 64px 340px;
